syntax = "proto3";
package protobuf;

import "google/protobuf/timestamp.proto";

option go_package = "./";

message CurrencyItem {
  string currency_pair = 1;
  double price = 2; // float64 in golang
  google.protobuf.Timestamp price_valid_at = 3;
}

message CurrencyGetPriceRequest {
  repeated string currency_pairs = 1;
}

message CurrencyGetPriceReply {
  repeated CurrencyItem currency_items = 1;
}

message CurrencySyncPriceRequest {
  repeated string currency_pairs = 1;
}

message CurrencySubscribeRequest {
  repeated string currency_pairs = 1;
}

message CurrencyGetSubscriptionsReply {
  repeated CurrencyItem currency_items = 1;
}


